<resources>
    <string name="app_name">My Application</string>
    <string name="first_value_tv">First Value</string>
    <string name="enter_the_first_value_here_et">Enter the first value here</string>
    <string name="second_value_tv">Second Value</string>
    <string name="enter_the_second_value_here_et">Enter the second value here</string>
    <string name="calculate_btn">Calculate</string>
    <string name="result_tv">Result of calculation</string>
    <string name="warning_one">Enter value in first field</string>
    <string name="warning_two">Enter value in second field</string>
    <string name="move_btn">Move</string>
    <string name="move_to_alert_screen_btn">Move To Alert Screen</string>
    <string name="show_alert_dialog_btn">Show alert dialog</string>
    <string name="move_to_custom_list_text">Move to custom list</string>


</resources>