<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_layout"
    android:background="@color/bg_color"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/main_iv"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_main_iv"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/first_value_tv"
        android:layout_below="@id/main_iv"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/first_value_tv"
        android:textSize="15sp"
        android:fontFamily="@font/tw_averta_regular"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/first_value_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_value_tv"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/tw_averta_regular"
        android:hint="@string/enter_the_first_value_here_et"
        android:inputType="number"
        android:maxLength="5"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/second_value_tv"
        android:layout_below="@id/first_value_et"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/second_value_tv"
        android:textSize="15sp"
        android:fontFamily="@font/tw_averta_regular"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/second_value_et"
        android:layout_below="@id/second_value_tv"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_the_second_value_here_et"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:inputType="number"
        android:maxLength="5"
        android:fontFamily="@font/tw_averta_regular"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calculate_btn"
        android:layout_below="@id/second_value_et"
        android:layout_centerInParent="true"
        android:text="@string/calculate_btn"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/bg_btn_color"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_tv"
        android:layout_below="@id/calculate_btn"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/tw_averta_regular"
        android:text="@string/result_tv"
        android:gravity="center"
        android:textSize="15sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/innerRL"
        android:layout_below="@id/result_tv"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/move_btn"
            android:text="@string/move_btn"
            android:textAllCaps="false"
            />

        <Button
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/move_alert_page_btn"
            android:text="@string/move_to_alert_screen_btn"
            android:layout_toRightOf="@id/move_btn"
            android:textAllCaps="false"
            />

    </RelativeLayout>























</RelativeLayout>